# asctec_quadrotor

./: .gitignore  index.html  stack.xml
asctec/: CMakeLists.txt  mainpage.dox  manifest.xml
asctec/include/: AscTecDataTypes.h  AscTecInterface.h
asctec/ipc/: Makefile
asctec/ipc/include/: asctec_Command.h  asctec_Status.h
asctec/ipc/include/ipc_bridge/msgs/: asctec_Command.h  asctec_Status.h
asctec/ipc/mex/: asctec_Command.cc  asctec_Status.cc
asctec/ipc/ros/: asctec_Command_publisher.cc  asctec_Command_subscriber.cc  asctec_Status_publisher.cc  asctec_Status_subscriber.cc
asctec/ipc/xdr/: asctec_Command.xdr  asctec_Status.xdr
asctec/launch/: pelican.launch  test.launch
asctec/matlab/: test.m
asctec/msg/: Altitude.msg  Command.msg  DMCmd.msg  PDCmd.msg  PelicanStatus.msg  SerialStatus.msg  Status.msg  Trim.msg  Voltage.msg
asctec/src/: AscTecInterface.cc  AscTecPacket.cc  asctec.cc
asctec_ll/: CMakeLists.txt  mainpage.dox  manifest.xml
asctec_ll/include/: AscTecDataTypes.h  AscTecLLInterface.h  AscTecPacket.h  SerialDevice.hh
asctec_ll/launch/: test.launch
asctec_ll/msg/: CTRLOut.msg  GPSData.msg  GPSDataAdvanced.msg  IMUCalcData.msg  IMURawData.msg  LLStatus.msg  RCData.msg  SICmd.msg
asctec_ll/src/: AscTecLLInterface.cc  SerialDevice.cc  asctec_ll.cc
asctec_packet/: CMakeLists.txt  mainpage.dox  manifest.xml
asctec_packet/include/: AscTecPacket.h
firmware/: .gitignore  LL_HL_comm.c  LL_HL_comm.h  main.c  main.h  sdk.c  sdk.h  system.c  system.h  uart.c  uart.h
quadrotor_simulator/: CMakeLists.txt  mainpage.dox  manifest.xml
(+19 files in other folders)
